// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`</Text> its render as default with props mobile and desktop 1`] = `
@media only screen and (min-width:0px) {
  .c0 {
    font-size: 7vw;
    font-weight: normal;
    line-height: 1.25;
  }
}

@media only screen and (min-width:652px) {
  .c0 {
    font-size: 3rem;
    font-weight: 500;
    line-height: 1.25;
  }
}

<h1
  className="c0"
>
  Teste
</h1>
`;

exports[`</Text> its render as default without props and children 1`] = `
@media only screen and (min-width:0px) {
  .c0 {
    font-size: 1rem;
    font-weight: normal;
    line-height: 1.25;
  }
}

@media only screen and (min-width:652px) {
  .c0 {
    font-size: 1.2rem;
    font-weight: 400;
    line-height: 1.25;
  }
}

<span
  className="c0"
/>
`;

exports[`</Text> its render as href(Link) and props mobile and desktop 1`] = `
.c0 {
  color: #35474e;
  text-underline-position: under;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #009688;
  -webkit-transition: 350ms ease-in-out;
  transition: 350ms ease-in-out;
}

@media only screen and (min-width:0px) {
  .c1 {
    font-size: 7vw;
    font-weight: normal;
    line-height: 1.25;
  }
}

@media only screen and (min-width:652px) {
  .c1 {
    font-size: 3rem;
    font-weight: 500;
    line-height: 1.25;
  }
}

<a
  class="c0 c1"
  href="/"
>
  Teste
</a>
`;
